fix  warring code